# GameOfLife_C-

./: README.md  quickstart.sh
src/: CMakeLists.txt  aspect_ratio.h  cell.h  computation_box.cpp  computation_box.h  game_of_life.cpp  game_of_life.h  helper.h  main.cpp  pause_play.h  ui.cpp  ui.h  ui_cell.h  ui_constants.h
